--- a/_layout/navbar.html
+++ b/_layout/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark container lighter">
     <a class="navbar-brand" href="/">
       <div class="logo" style="font-size:30pt;margin-top:-15px;margin-bottom:-10px;">
-      <img src="./assets/logo-umass.png" style="height:30pt;" alt="">
+      <img src="./assets/logo-umass-white.png" style="height:30pt;" alt="">
       </div>
     </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,16 +12,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="https://qnumerics.org/#" target="_blank">Registration</a>
+        <a class="nav-link" href="/cirriculum" target="_blank">Cirriculum </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://qnumerics.org/#" target="_blank">Cirriculum </a>
+        <a class="nav-link" href="/publications" target="_blank">Publications </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://qnumerics.org/#" target="_blank">Accommodations </a>
+        <a class="nav-link" href="/seminars" target="_blank">Seminars </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://qnumerics.org/#" target="_blank">Location </a>
+        <a class="nav-link" href="/hiring" target="_blank">Hiring </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contact" target="_blank">Contact </a>
       </li>
     </ul>
   </div>
