--- a/_css/site.css
+++ b/_css/site.css
@@ -150,8 +150,17 @@ p a:hover {
 .footer {
   margin-top: 1.5rem;
   margin-bottom: 3rem;
-  color: white
+  color: white;
 }
+
+.footer p {
+  max-width: 100%;
+}
+
+.footer a, .footer a:hover, .footer a:visited, .footer a:visited:hover {
+  color: white;
+}
+
 
 pre {
   margin: 0
