--- a/_layout/navbar.html
+++ b/_layout/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark container lighter">
     <a class="navbar-brand" href="/">
       <div class="logo" style="font-size:30pt;margin-top:-15px;margin-bottom:-10px;">
-      <img src="./assets/logo-umass-white.png" style="height:30pt;" alt="">
+      <img src="/assets/logo-umass-white.png" style="height:30pt;" alt="">
       </div>
     </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
