--- a/_layout/navbar.html
+++ b/_layout/navbar.html
@@ -1,31 +1,37 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark container lighter">
-    <a class="navbar-brand" href="/">
-      <div class="logo" style="font-size:30pt;margin-top:-15px;margin-bottom:-10px;">
-      <img src="/assets/logo-umass-white.png" style="height:30pt;" alt="">
-      </div>
-    </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<nav class="navbar navbar-expand-sm navbar-dark container lighter">
+  <div class="" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/cirriculum" target="_blank">Cirriculum </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/publications" target="_blank">Publications </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/seminars" target="_blank">Seminars </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/hiring" target="_blank">Hiring </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/contact" target="_blank">Contact </a>
+        <a id="wordmark" href="https://www.umass.edu/" target="_blank" title="UMass Amherst">The University of Massachusetts Amherst</a>
       </li>
     </ul>
   </div>
+</nav>
+
+<nav id="secondarynavbar" class="navbar navbar-expand-sm navbar-light">
+<div class="collapse navbar-collapse container flex-wrap" id="navbarSupportedContent">
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      <a class="nav-link" href="{{website_url}}/">Quantum Information Science</a>
+    </li>
+  </ul>
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <a class="nav-link" href="{{website_url}}/publications">Publications </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{website_url}}/cirriculum">Cirriculum </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{website_url}}/seminars">Seminars </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{website_url}}/hiring">Hiring </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{website_url}}/visit">Visit </a>
+    </li>
+  </ul>
+</div>
 </nav>
