--- a/_layout/head.html
+++ b/_layout/head.html
@@ -29,10 +29,12 @@
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- Favicon details -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://www.umass.edu/favicons/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="https://www.umass.edu/favicons/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://www.umass.edu/favicons/favicon-16x16.png"/>
+    <link rel="manifest" href="https://www.umass.edu/favicons/site.webmanifest"/>
+    <link rel="mask-icon" href="https://www.umass.edu/favicons/safari-pinned-tab.svg" color="#881c1c"/>
+    <link rel="shortcut icon" href="https://www.umass.edu/favicons/favicon.ico?v=1.0.0"/>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
