--- a/_layout/navbar.html
+++ b/_layout/navbar.html
@@ -21,7 +21,7 @@
       <a class="nav-link" href="{{website_url}}/publications">Publications </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{website_url}}/cirriculum">Cirriculum </a>
+      <a class="nav-link" href="{{website_url}}/Curriculum">Curriculum </a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{website_url}}/seminars">Seminars </a>
