--- a/_layout/navbar.html
+++ b/_layout/navbar.html
@@ -13,24 +13,24 @@
 <div class="collapse navbar-collapse container flex-wrap" id="navbarSupportedContent">
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
-      <a class="nav-link" href="{{website_url}}/">Quantum Information Science</a>
+      <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/">Quantum Information Science</a>
     </li>
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" href="{{website_url}}/publications">Publications </a>
+      <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/publications">Publications </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{website_url}}/Curriculum">Curriculum </a>
+      <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/Curriculum">Curriculum </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{website_url}}/seminars">Seminars </a>
+      <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/seminars">Seminars </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{website_url}}/hiring">Hiring </a>
+      <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/hiring">Hiring </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{website_url}}/visit">Visit </a>
+      <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/visit">Visit </a>
     </li>
   </ul>
 </div>
