--- a/_layout/navbar.html
+++ b/_layout/navbar.html
@@ -21,7 +21,7 @@
       <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/publications">Publications </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/Curriculum">Curriculum </a>
+      <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/curriculum">Curriculum </a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/seminars">Seminars </a>
