--- a/_css/site.css
+++ b/_css/site.css
@@ -1,11 +1,11 @@
+
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:ital,wght@0,300..800;1,300..800");
+@import url("https://fonts.googleapis.com/css?family=Public+Sans:ital,wght@0,100..900;1,100..900");
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400i");
 
 :root {
   --main-color: #881C1C;
-  --dark-color: color-mix(in srgb, var(--main-color) 80%, black);
-  --vdark-color: color-mix(in srgb, var(--main-color) 40%, black);
-  --light-color: color-mix(in srgb, var(--main-color) 80%, white);
-  --vlight-color: color-mix(in srgb, var(--main-color) 40%, white);
+  --dark-color: #212721;
 }
 
 @media only screen and (min-width: 785px) {
@@ -16,7 +16,7 @@
 
 @media only screen and (max-width: 785px) {
   #wordmark {
-    background: url(//www.umass.edu/brand/sites/all/themes/brand/css/images/wordmark.svg);
+    background: url(//www.umass.edu/static/branding/images/UMassAmherst_shortform-reversed.svg);
   }
 }
 
@@ -40,12 +40,22 @@
 
 body {
   background: var(--main-color);
-  font-family: Lato, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: "Open Sans", "Public Sans", Lato, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   line-height: 1.7
 }
 
 #secondarynavbar {
   background-color: white;
+  font-size: 2rem;
+}
+
+#secondarynavbar a {
+  color: var(--dark-color);
+}
+
+#tertiarynavbar {
+  background-color: white;
+  color: var(--dark-color);
 }
 
 .logo {
@@ -54,6 +64,10 @@ body {
 
 .navbar .logo {
   text-shadow: 2px 2px 5px rgba(0,0,0,0.1)
+}
+
+#mainnavbar .nav-link {
+  color: white;
 }
 
 .content {
@@ -69,7 +83,7 @@ body {
 .content h1 {
   font-size: 20pt;
   padding-bottom: 0.2em;
-  border-bottom: 3px solid var(--vlight-color);
+  border-bottom: 3px solid var(--main-color);
   text-align: center;
   font-weight: bold;
   margin-bottom: 1em
@@ -100,7 +114,7 @@ body {
 
 .content blockquote {
   font-style: italic;
-  border-left: 5px solid var(--vlight-color);
+  border-left: 5px solid var(--main-color);
   padding-left: 1em;
   margin-left: 1em
 }
@@ -144,11 +158,11 @@ p a:hover, p a:visited:hover, h3 a:hover, h3 a:visited:hover, h4 a:hover, h4 a:v
 
 p a, p a:visited, h3 a, h3 a:visited, h4 a, h4 a:visited, h5 a, h5 a:visited{
   color: var(--main-color);
-  border-bottom: 2px solid var(--vlight-color);
+  border-bottom: 2px solid var(--main-color);
 }
 
 p a:hover, h3 a:hover, h4 a:hover, h5 a:hover {
-  border-bottom: 2px solid var(--vlight-color);
+  border-bottom: 2px solid var(--main-color);
 }
 
 .feature a:hover, .feature a:visited:hover {
@@ -158,7 +172,7 @@ p a:hover, h3 a:hover, h4 a:hover, h5 a:hover {
 
 .feature a, .feature a:visited {
   color: var(--main-color);
-  border-bottom: 2px solid var(--vlight-color);
+  border-bottom: 2px solid var(--main-color);
 }
 
 .feature a:hover {
@@ -176,8 +190,8 @@ p a:hover, h3 a:hover, h4 a:hover, h5 a:hover {
 }
 
 .footer {
-  margin-top: 1.5rem;
-  margin-bottom: 3rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
   color: white;
 }
 
@@ -187,6 +201,13 @@ p a:hover, h3 a:hover, h4 a:hover, h5 a:hover {
 
 .footer a, .footer a:hover, .footer a:visited, .footer a:visited:hover {
   color: white;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    text-align: center;
+  }
 }
 
 
@@ -196,7 +217,7 @@ pre {
 
 pre code.hljs {
   background: #f5ffff;
-  border: 2px solid var(--vlight-color);
+  border: 2px solid var(--main-color);
   border-radius: 5px;
   padding-left: 1em;
   padding-right: 1em;
@@ -232,11 +253,11 @@ pre code.hljs {
 }
 
 .jumbotron hr {
-  border-top: 1px solid var(--vlight-color);
+  border-top: 1px solid var(--main-color);
 }
 
 .jumbotron h1 {
-  font-family: lato;
+  font-family: "Open Sans", "Public Sans", lato;
   font-style: italic;
 }
 
@@ -252,14 +273,14 @@ pre code.hljs {
 
 .btn-primary {
   color: var(--dark-color);
-  border-color: var(--vlight-color);
+  border-color: var(--main-color);
   background: none;
   border-width: 2px;
 }
 
 .jumbotron .btn-primary:hover {
   color: rgb(0, 0, 0);
-  border-color: var(--vdark-color);
+  border-color: var(--dark-color);
   background: none;
   border-width: 2px;
 }
@@ -278,7 +299,7 @@ pre code.hljs {
 
 .feature-title {
   text-align:center;
-  color: var(--light-color);
+  color: var(--main-color);
 }
 
 .paper {
