--- a/_layout/foot.html
+++ b/_layout/foot.html
@@ -6,8 +6,18 @@
     {{end}}
 
     <!-- Footer -->
-    <div class="container footer lighter">
-      <p>{{website_footer}}</p>
+    <div class="container footer">
+      <div class="row">
+        <div class="col-md">
+          <a href="https://www.umass.edu/" title="University of Massachusetts Amherst" id="umass--global--footer-wordmark">
+            <img src="{{ispage index}}.{{else}}..{{end}}/assets/logo-umass-white.png" style="max-width: 100px; max-height: 100px;">
+          </a>      
+        </div>
+        <div class="col-md" style="margin-top: auto;">
+          <div id="umass--global--footer--links">©{{current_year}} <a href="https://www.umass.edu/" id="umass--global--footer-home">University of Massachusetts Amherst</a> · <a href="https://www.umass.edu/gateway/site-policies" id="umass--global--footer-policies">Site&nbsp;Policies</a> · <a href="https://www.umass.edu/accessibility/" id="umass--global--footer-accessibility">Accessibility</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Scripts -->
