--- a/_layout/navbar.html
+++ b/_layout/navbar.html
@@ -1,10 +1,13 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-sm navbar-dark container lighter">
-  <div class="" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a id="wordmark" href="https://www.umass.edu/" target="_blank" title="UMass Amherst">The University of Massachusetts Amherst</a>
-      </li>
+<nav class="navbar navbar-expand-sm navbar-dark" id="mainnavbar">
+  <a class="navbar-brand" id="wordmark" href="https://www.umass.edu/" target="_blank" title="UMass Amherst">The University of Massachusetts Amherst</a>
+
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item"><a class="nav-link" href="https://www.umass.edu/admissions/undergraduate-admissions/visit" id="umass--global--visit">Visit</a></li>
+      <li class="nav-item"><a class="nav-link" href="https://www.umass.edu/admissions" id="umass--global--apply">Apply</a></li>
+      <li class="nav-item"><a class="nav-link" href="https://www.umass.edu/give" id="umass--global--give">Give</a></li>
+      <li class="nav-item"><a class="nav-link" href="https://www.umass.edu/search" id="umass--global--search" style="background-image: url(//www.umass.edu/static/branding/images/search-reversed.svg); background-repeat: no-repeat; overflow: hidden; background-size: contain; background-position: left center; height: 1.5rem; width: 1.5rem; bottom: -0.6rem; position: relative; color: transparent;"></a></li>
     </ul>
   </div>
 </nav>
@@ -16,6 +19,10 @@
       <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/">Quantum Information Science</a>
     </li>
   </ul>
+</div>
+</nav>
+<nav id="tertiarynavbar" class="navbar navbar-expand-sm navbar-light">
+<div class="collapse navbar-collapse container flex-wrap" id="navbarSupportedContent">
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
       <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/publications">Publications </a>
