fixes based on an accessability scanner

--- a/_css/site.css
+++ b/_css/site.css
@@ -139,7 +139,7 @@ body {
   margin-right: auto;
 }
 .container p {
-  text-align:justify;
+  text-align: left;
 }
 .container p.p-image {
   max-width: 100%;
