--- a/_layout/foot.html
+++ b/_layout/foot.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-md">
           <a href="https://www.umass.edu/" title="University of Massachusetts Amherst" id="umass--global--footer-wordmark">
-            <img src="{{ispage index}}.{{else}}..{{end}}/assets/logo-umass-white.png" style="max-width: 100px; max-height: 100px;">
+            <img src="{{ispage index}}.{{else}}..{{end}}/assets/logo-umass-white.png" style="max-width: 100px; max-height: 100px;"  alt="The UMass Amherst logo">
           </a>      
         </div>
         <div class="col-md" style="margin-top: auto;">
@@ -23,7 +23,6 @@
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="/libs/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
   </body>
