--- a/_layout/head.html
+++ b/_layout/head.html
@@ -18,12 +18,12 @@
     </style>
 
     <!-- Social media previews -->
-    <meta property="og:title" content="{{website_title}}">
+    <meta property="og:title" content="{{isnotpage index}}{{isdef title}}{{title}} : {{end}}{{end}}{{website_title}}">
     <meta property="og:description" content="{{website_descr}}">
     <meta property="og:image" content="{{website_img}}">
     <meta property="og:url" content="{{website_url}}">
 
-    <meta name="twitter:title" content="{{website_title}}">
+    <meta name="twitter:title" content="{{isnotpage index}}{{isdef title}}{{title}} : {{end}}{{end}}{{website_title}}">
     <meta name="twitter:description" content="{{website_descr}}">
     <meta name="twitter:image" content="{{website_img}}">
     <meta name="twitter:card" content="summary_large_image">
@@ -80,7 +80,7 @@
         });">
     </script>
     
-    <title>{{website_title}}</title>
+    <title>{{isnotpage index}}{{isdef title}}{{title}} : {{end}}{{end}}{{website_title}}</title>
   </head>
   <body>
 
