--- a/_layout/foot.html
+++ b/_layout/foot.html
@@ -13,7 +13,7 @@
             <img src="{{ispage index}}.{{else}}..{{end}}/assets/logo-umass-white.png" style="max-width: 100px; max-height: 100px;"  alt="The UMass Amherst logo">
           </a>      
         </div>
-        <div class="col-md-8" style="margin-top: auto;">
+        <div class="col-md-8" style="margin-top: auto; text-align: right;">
           <div id="umass--global--footer--links">©{{current_year}} <a href="https://www.umass.edu/" id="umass--global--footer-home">University of Massachusetts Amherst</a> · <a href="https://www.umass.edu/gateway/site-policies" id="umass--global--footer-policies">Site&nbsp;Policies</a> · <a href="https://www.umass.edu/accessibility/" id="umass--global--footer-accessibility">Accessibility</a>
           </div>
         </div>
