--- a/_layout/navbar.html
+++ b/_layout/navbar.html
@@ -7,7 +7,7 @@
       <li class="nav-item"><a class="nav-link" href="https://www.umass.edu/admissions/undergraduate-admissions/visit" id="umass--global--visit">Visit</a></li>
       <li class="nav-item"><a class="nav-link" href="https://www.umass.edu/admissions" id="umass--global--apply">Apply</a></li>
       <li class="nav-item"><a class="nav-link" href="https://www.umass.edu/give" id="umass--global--give">Give</a></li>
-      <li class="nav-item"><a class="nav-link" href="https://www.umass.edu/search" id="umass--global--search" style="background-image: url(//www.umass.edu/static/branding/images/search-reversed.svg); background-repeat: no-repeat; overflow: hidden; background-size: contain; background-position: left center; height: 1.5rem; width: 1.5rem; bottom: -0.6rem; position: relative; color: transparent;"></a></li>
+      <li class="nav-item"><a class="nav-link" href="https://www.umass.edu/search" id="umass--global--search" style="background-image: url(//www.umass.edu/static/branding/images/search-reversed.svg); background-repeat: no-repeat; overflow: hidden; background-size: contain; background-position: left center; height: 1.5rem; width: 1.5rem; bottom: -0.6rem; position: relative; color: transparent;">search</a></li>
     </ul>
   </div>
 </nav>
