--- a/_layout/foot.html
+++ b/_layout/foot.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-md">
           <a href="https://www.umass.edu/" title="University of Massachusetts Amherst" id="umass--global--footer-wordmark">
-            <img src="{{ispage index}}.{{else}}..{{end}}/assets/logo-umass-white.png" style="max-width: 100px; max-height: 100px;"  alt="The UMass Amherst logo">
+            <img src="{{ispage index}}.{{else}}..{{end}}/assets/logo-umass-transparent.svg" style="max-width: 100px; max-height: 100px;"  alt="The UMass Amherst logo">
           </a>      
         </div>
         <div class="col-md-8" style="margin-top: auto; text-align: right;">
