--- a/_layout/navbar.html
+++ b/_layout/navbar.html
@@ -34,6 +34,9 @@
       <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/seminars">Seminars </a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/workshops">Workshops </a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" href="{{ispage index}}.{{else}}..{{end}}/hiring">Hiring </a>
     </li>
     <li class="nav-item">
